# docker-sentinel

./: .env.example  CHANGELOG.md  Makefile  README.md  docker-sentinel.spec  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yml
docker_sentinel/: cli.py  config.py  models.py  report.py  runner.py
docker_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docker_sentinel/agents/: dynamic_scanner.py  image_profiler.py  pipeline.py  rater.py  scorer.py  static_scanner.py  synthesizer.py  url_validator.py
docker_sentinel/tools/: _toon.py  _toon_encoder.py  capability_analyzer.py  docker_hub.py  docker_meta.py  dynamic_runner.py  env_analyzer.py  history_analyzer.py  layer_analyzer.py  manifest_analyzer.py  persistence_analyzer.py  script_analyzer.py  trufflehog_runner.py  url_extractor.py  url_validator.py
hooks/: hook-win32api.py  rthook_pywin32.py
scripts/: build-local.ps1  install.ps1  install.sh
skills/.claude-plugin/: marketplace.json  plugin.json
skills/docker-sentinel/.claude-plugin/: plugin.json
skills/docker-sentinel/agents/: docker-sentinel-profiler.md  docker-sentinel-rater.md  docker-sentinel-scorer.md  docker-sentinel-shower.md
skills/docker-sentinel/skills/: SKILL.md
skills/docker-sentinel/skills/docker-sentinel/: SKILL.md
skills/docker-sentinel/skills/docker-sentinel/agents/: profiler.md  rater.md
skills/skills/docker-sentinel/agents/: scorer.md
tests/: test_toon_revert.py
